Pull request #1074: AG-10165 fix checkboxes
Merge in EXTENSIONS/browser-extension from AG-10165 to master

Squashed commit of the following:

commit 23e9821718a03029dbc0b449bb43973569106702
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 21 19:06:27 2021 +0300

    AG-10165 border radius

commit 2baacad395bb0d883b47df5ba36a8a7b07b93312
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 21 18:16:56 2021 +0300

    AG-10165 fix verical align

commit b606c0136aa184e37da2565c95596bfe93fd63b2
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 21 16:35:47 2021 +0300

    AG-10165 mod to mode

commit a3bda9ddba50dbdcfd2f74af016674a2b650493b
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 21 16:08:27 2021 +0300

    AG-10165 fix checkboxes

--- a/Extension/src/pages/options/components/Filters/group.pcss
+++ b/Extension/src/pages/options/components/Filters/group.pcss
@@ -9,7 +9,7 @@
 
     &__checkbox {
         @media (min-width: 640px) {
-            border-radius: 0 8px 8px 0;
+            border-radius: 8px;
         }
     }
 }
